refactored code to use my modern standards  - sub commands use a common abstract class as parent  - translations get managed and loaded from a ressource bundle  - config file is delivered in jar  - database does not use a separate table per treasure  - don't use static functions to get instances  - permissions have parents we don't need to check them individually anymore  - make use of CompletableFuture instead of weird callbacks Treasures now get identified by an id instead of a location Import legacy data does not depend on the old plugin to be loaded anymore
 sill todo:
  - save default treasure loot as well in the database
  - check what happens if a treasure get's open, and it's inventory size does not match the expected one.
  - formatting in RessourceBundle
  - somehow list known treasure locations
  - get list of all known treasure ids