@@ -1,61 +1,76 @@
 package de.greensurvivors.greentreasure.comands;
 
 import de.greensurvivors.greentreasure.GreenTreasure;
-import de.greensurvivors.greentreasure.language.Lang;
-import de.greensurvivors.greentreasure.permission.Perm;
+import de.greensurvivors.greentreasure.language.LangPath;
+import de.greensurvivors.greentreasure.language.PlaceHolderKey;
+import de.greensurvivors.greentreasure.permission.PermmissionManager;
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.JoinConfiguration;
+import net.kyori.adventure.text.minimessage.tag.resolver.Placeholder;
 import org.bukkit.command.CommandSender;
+import org.bukkit.permissions.Permissible;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
-import static de.greensurvivors.greentreasure.comands.TreasureCommands.ABOUT;
+public class AboutSubCommand extends ASubCommand {
 
-public class AboutSubCommand {
-    private static AboutSubCommand instance;
+    public AboutSubCommand(@NotNull GreenTreasure plugin) {
+        super(plugin);
+    }
 
-    public static AboutSubCommand inst() {
-        if (instance == null)
-            instance = new AboutSubCommand();
-        return instance;
+    @Override
+    protected boolean checkPermission(@NotNull Permissible permissible) {
+        return permissible.hasPermission(PermmissionManager.TREASURE_ABOUT.get());
+    }
+
+    @Override
+    public @NotNull Set<@NotNull String> getAliases() {
+        return Set.of("about");
+    }
+
+    @Override
+    @NotNull
+    public Component getHelpText() {
+        return null;
     }
 
     /**
      * get basic information about this plugin like its version
      * /gt about
      *
-     * @param commandSender sender of this command
+     * @param sender sender of this command
      */
-
-    protected void handleAbout(CommandSender commandSender) {
-        if (Perm.hasPermission(commandSender, Perm.TREASURE_ADMIN, Perm.TREASURE_ABOUT)) {
+    @Override
+    public boolean onCommand(final @NotNull CommandSender sender, final @NotNull String @NotNull [] args) {
+        if (checkPermission(sender)) {
             // collect all messages to send at once
             List<Component> components = new ArrayList<>();
             // header
-            components.add(Lang.build(Lang.PLUGIN_HEADER.get()));
+            components.add(plugin.getMessageManager().getLang(LangPath.CMD_ABOUT_PLUGIN_HEADER));
             // version (update ?)
-            components.add(Lang.build(Lang.PLUGIN_VERSION.get().replace(Lang.VALUE, GreenTreasure.inst().getDescription().getVersion())));
+            components.add(plugin.getMessageManager().getLang(LangPath.CMD_ABOUT_PLUGIN_VERSION,
+                Placeholder.unparsed(PlaceHolderKey.NUMBER.getKey(), plugin.getPluginMeta().getVersion())));
 
             //description
-            components.add(Lang.build(Lang.PLUGIN_DESCRIPTION.get().replace(Lang.VALUE, GreenTreasure.inst().getDescription().getDescription())));
+            components.add(plugin.getMessageManager().getLang(LangPath.CMD_ABOUT_PLUGIN_DESCRIPTION,
+                Placeholder.unparsed(PlaceHolderKey.TEXT.getKey(), plugin.getPluginMeta().getDescription())));
 
             // send components
-            commandSender.sendMessage(Lang.join(components));
+            sender.sendMessage(Component.join(JoinConfiguration.newlines(), components));
         } else {
-            commandSender.sendMessage(Lang.build(Lang.NO_PERMISSION_COMMAND.get()));
+            plugin.getMessageManager().sendLang(sender, LangPath.NO_PERMISSION);
         }
+
+        return true;
     }
 
-    /**
-     * @param args The arguments passed to the command, including final
-     *             partial argument to be completed
-     * @return suggestion of arguments
-     */
-    protected List<String> handleTabComplete(@NotNull String[] args) {
+    @Override
+    public @NotNull List<@NotNull String> onTabComplete(@NotNull CommandSender sender, @NotNull String @NotNull [] args) {
         if (args.length == 1) {
-            return Collections.singletonList(ABOUT);
+            return List.copyOf(getAliases());
         } else {
             return new ArrayList<>();
         }
