@@ -1,29 +1,43 @@
 package de.greensurvivors.greentreasure.comands;
 
-import de.greensurvivors.greentreasure.config.TreasureConfig;
+import de.greensurvivors.greentreasure.GreenTreasure;
+import de.greensurvivors.greentreasure.Utils;
 import de.greensurvivors.greentreasure.dataobjects.TreasureInfo;
-import de.greensurvivors.greentreasure.language.Lang;
-import de.greensurvivors.greentreasure.listener.TreasureListener;
-import de.greensurvivors.greentreasure.permission.Perm;
+import de.greensurvivors.greentreasure.language.LangPath;
+import de.greensurvivors.greentreasure.language.PlaceHolderKey;
+import de.greensurvivors.greentreasure.permission.PermmissionManager;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.minimessage.tag.resolver.Placeholder;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.block.Container;
 import org.bukkit.command.CommandSender;
-import org.bukkit.entity.LivingEntity;
 import org.bukkit.entity.Player;
+import org.bukkit.permissions.Permissible;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 
-import static de.greensurvivors.greentreasure.comands.TreasureCommands.FORGET;
+public class ForgetSubCommand extends ASubCommand {
 
-public class ForgetSubCommand {
-    private static ForgetSubCommand instance;
+    public ForgetSubCommand(final @NotNull GreenTreasure plugin) {
+        super(plugin);
+    }
 
-    public static ForgetSubCommand inst() {
-        if (instance == null)
-            instance = new ForgetSubCommand();
-        return instance;
+    @Override
+    protected boolean checkPermission(@NotNull Permissible permissible) {
+        return permissible.hasPermission(PermmissionManager.TREASURE_FORGET.get());
+    }
+
+    @Override
+    public @NotNull Set<@NotNull String> getAliases() {
+        return Set.of("forget");
+    }
+
+    @Override
+    public @NotNull Component getHelpText() {
+        return null;
     }
 
     /**
@@ -32,73 +46,97 @@ public class ForgetSubCommand {
      * /gt forget uuid
      * /gt forget playerName
      *
-     * @param commandSender sender of this command
-     * @param args          given arguments
+     * @param sender sender of this command
+     * @param args   given arguments
      */
-    protected void handleForget(CommandSender commandSender, String[] args) {
-        if (Perm.hasPermission(commandSender, Perm.TREASURE_ADMIN, Perm.TREASURE_FORGET)) {
-            Container container = TreasureCommands.getContainer(commandSender);
+    public boolean onCommand(final @NotNull CommandSender sender, final @NotNull String @NotNull [] args) {
+        if (checkPermission(sender)) {
+            Container container = plugin.getTreasureCommands().getContainer(sender);
 
             if (container != null) {
-                TreasureInfo treasureInfo = TreasureListener.inst().getTreasure(container.getLocation());
+                final @Nullable String treasureId = plugin.getTreasureListener().getTreasureId(container);
 
-                if (treasureInfo != null && treasureInfo.isGlobal()) {
-                    commandSender.sendMessage(Lang.build(Lang.FORGET_PLAYER_START.get()));
-                    TreasureConfig.inst().forgetPlayerAsync(null, container.getBlock().getLocation(), () ->
-                            commandSender.sendMessage(Lang.build(Lang.FORGET_ALL_END.get())));
+                if (treasureId != null) {
+                    final @Nullable TreasureInfo treasureInfo = plugin.getTreasureListener().getTreasure(treasureId);
 
-                    return;
-                }
-
-                UUID uuidToForget;
-                if (args.length >= 2) {
-                    OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer(args[1]);
-                    if (offlinePlayer.hasPlayedBefore()) {
-                        uuidToForget = offlinePlayer.getUniqueId();
-                    } else {
-                        try {
-                            uuidToForget = UUID.fromString(args[1]);
-                        } catch (IllegalArgumentException ignored) {
-                            commandSender.sendMessage(Lang.build(Lang.NO_SUCH_PLAYER.get().replace(Lang.VALUE, args[1])));
-                            return;
+                    if (treasureInfo != null) {
+                        if (treasureInfo.isShared()) {
+                            plugin.getConfigHandler().forgetPlayer(null, treasureId).thenRun(() ->
+                                plugin.getMessageManager().sendLang(sender, LangPath.CMD_FORGET_SHARED_SUCCESS,
+                                    Placeholder.component(PlaceHolderKey.NAME.getKey(), Utils.getDisplayName(container))));
                         }
+
+                        final OfflinePlayer playerToForget;
+                        if (args.length >= 2) {
+                            OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer(args[1]);
+                            if (offlinePlayer.hasPlayedBefore()) {
+                                playerToForget = offlinePlayer;
+                            } else {
+                                try {
+                                    playerToForget = Bukkit.getOfflinePlayer(UUID.fromString(args[1]));
+                                } catch (IllegalArgumentException ignored) {
+                                    plugin.getMessageManager().sendLang(sender, LangPath.ARG_NOT_PLAYER,
+                                        Placeholder.unparsed(PlaceHolderKey.TEXT.getKey(), args[1]));
+                                    return false;
+                                }
+                            }
+                        } else {
+                            if (sender instanceof OfflinePlayer offlinePlayer) {
+                                playerToForget = offlinePlayer;
+                            } else {
+                                plugin.getMessageManager().sendLang(sender, LangPath.ERROR_SENDER_NOT_PLAYER);
+                                return true;
+                            }
+                        }
+
+                        if (playerToForget.hasPlayedBefore()) {
+                            plugin.getConfigHandler().forgetPlayer(playerToForget, treasureId).thenRun(() -> {
+                                final @NotNull Component playerName;
+                                final @Nullable Player player = playerToForget.getPlayer();
+                                if (player != null) {
+                                    playerName = player.displayName();
+                                } else {
+                                    if (playerToForget.getName() != null) {
+                                        playerName = Component.text(playerToForget.getName());
+                                    } else {
+                                        playerName = Component.text(playerToForget.getUniqueId().toString());
+                                    }
+                                }
+
+                                plugin.getMessageManager().sendLang(sender, LangPath.CMD_FORGET_USER_SUCCESS,
+                                    Placeholder.component(PlaceHolderKey.NAME.getKey(), Utils.getDisplayName(container)),
+                                    Placeholder.component(PlaceHolderKey.PLAYER.getKey(), playerName));
+                            });
+                        } else {
+                            plugin.getMessageManager().sendLang(sender, LangPath.ARG_NOT_PLAYER,
+                                Placeholder.unparsed(PlaceHolderKey.TEXT.getKey(), args[1]));
+                            return false;
+                        }
+                    } else {
+                        plugin.getMessageManager().sendLang(sender, LangPath.ERROR_NOT_LOOKING_AT_TREASURE);
                     }
                 } else {
-                    if (commandSender instanceof LivingEntity livingEntity) {
-                        uuidToForget = livingEntity.getUniqueId();
-                    } else {
-                        commandSender.sendMessage(Lang.build(Lang.NO_PLAYER.get()));
-                        return;
-                    }
+                    plugin.getMessageManager().sendLang(sender, LangPath.ERROR_NOT_LOOKING_AT_TREASURE);
                 }
-
-                commandSender.sendMessage(Lang.build(Lang.FORGET_PLAYER_START.get()));
-                TreasureConfig.inst().forgetPlayerAsync(uuidToForget, container.getBlock().getLocation(), () ->
-                        commandSender.sendMessage(Lang.build(Lang.FORGET_PLAYER_END.get().replace(Lang.UUID, uuidToForget.toString()))));
             } else {
-                commandSender.sendMessage(Lang.build(Lang.NOT_LOOKINGAT_CONTAINER.get()));
+                plugin.getMessageManager().sendLang(sender, LangPath.ERROR_NOT_LOOKING_AT_CONTAINER);
             }
         } else {
-            commandSender.sendMessage(Lang.build(Lang.NO_PERMISSION_COMMAND.get()));
+            plugin.getMessageManager().sendLang(sender, LangPath.NO_PERMISSION);
         }
+
+        return true;
     }
 
-    /**
-     * @param args The arguments passed to the command, including final
-     *             partial argument to be completed
-     * @return suggestion of arguments
-     */
-    protected List<String> handleTabComplete(@NotNull String[] args) {
+    public @NotNull List<@NotNull String> onTabComplete(@NotNull CommandSender sender, final @NotNull String @NotNull [] args) {
         switch (args.length) {
             case 1 -> {
-                return Collections.singletonList(FORGET);
+                return List.copyOf(getAliases());
             }
             case 2 -> {
-                if (args[0].equalsIgnoreCase(FORGET)) {
-                    Collection<? extends Player> onlinePlayers = Bukkit.getOnlinePlayers();
-                    if (!onlinePlayers.isEmpty()) {
-                        return onlinePlayers.stream().map(Player::getName).toList();
-                    }
+                Collection<? extends Player> onlinePlayers = Bukkit.getOnlinePlayers();
+                if (!onlinePlayers.isEmpty()) {
+                    return onlinePlayers.stream().map(Player::getName).toList();
                 }
             }
         }
